maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: value ! is not a member of Int
  while(getY!()=0){
            ^Escaper:5: error: too many arguments for method getDirection: ()plm.universe.Direction
      getDirection(Direction.NORTH)
                  ^Escaper:8: error: not found: value KeepHandOnSiseWall
      KeepHandOnSiseWall()
      ^